# wRenamer

./: CMakeLists.txt  README.md  build.bat  main.cpp
bags/: Brotli.7z  zlib.7z
include/: wRenamer.h
src/: wRenamer.cpp
